--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "6.14.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
